feat: implement client-side filtering